src/pages/style.css
/* @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400'); */
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');



img, embed, object, video{
    max-width: 100%;         /*-to prevent overflow from its container-*/
}

body, html{
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
            height:100%;
            width:100%;
            margin: 0;
            padding: 0;

}
body{
    margin: 0;
}

/* disable highlight on click  */
html
{
  -webkit-tap-highlight-color: transparent;
}


.App{
    width: 90%;
    height: 100vh;
    position: relative;
    margin: 0 auto;
}
header{
    display: flex;
    justify-content: space-between;
}

.cover-image img{
    height: 100%;
    width: 100%;
}
h1, h2, h3, h4, p, a{
    font-family: 'Roboto', sans-serif;
    font-weight: 300;

}
h1{
    font-size: 1.1rem;
    line-height: 3rem;
}
h2{
    font-size: 1.1rem;
}
h3{
    font-size: 1.1rem;
}
h4{
    font-size: .85rem;
}

p{
    font-size: 1.1rem;
    margin: 0;
}

a{
    display: block;
    color: black;
    text-decoration: none;
    position: relative;
}
a:hover{
    /* text-decoration: underline; */
}
.link {
    font-family: 'Open Sans', sans-serif;
    font-size: 1.4rem;
    font-weight: 400;
}

.menu{
    display: none;
}

.name{
    z-index: 99;
}
.current {
    /* text-decoration: underline; */
    font-weight: 400;
}
.contact p a{
    display: inline-block;
}
.content{
    width: 70%;
    height: 100%;
    align-items: stretch;
    /* border: 1px solid blue; */
}
.images-container{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}
.project-text{
    margin-top: 1rem;
    margin-bottom: 4rem;
    line-height: 1.5;
}
.impressum-text, .info-text{
    text-align: left;
    line-height: 1.5;

}
.impressum-text, .datenschutz-text{
    margin-top: 4rem;
}
.impressum-text p:first-child{
    margin-bottom: 1rem;
}
.impressum-text p:not(:first-child){
    margin-bottom: 1rem;
}
.info-text p{
    margin-bottom: 1rem;
}
.info-text a{
    display: inline;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.4rem;
    font-weight: 400;
}
.info-text h2{
    font-family: 'Open Sans', sans-serif;
    font-size: 1.4rem;
    font-weight: 400;
    margin-bottom: 4rem;
}
.project-images{
    max-height: 100%;
    max-width: 100%;
}
.arrows{
    font-size: 1.5rem;
    position: fixed;
    bottom: 3rem;
    left: 0;
    right: 0;
    margin: 0 auto;
    width: 90%;
    display: flex;
    justify-content: space-between;
    cursor: pointer;
}
.arrows div{
    display: flex;
    justify-content: center;
    align-content: center;
    width: 2rem;
    height: 2rem;
}

/* --- HOME --- */
.home-images{
    height: 100%;
    cursor: pointer;
}


/*---------------Hamburger menu---------------------*/


.mobile-nav{
    margin-top: 0rem;
    width: 100%;
    position: fixed;
    height: 50px;
    display: inline-block;
}


.menu-btn {
	font-size: 18px;
	font-weight: 100;
	z-index: 9999;
    right: 0.6rem;
    position: fixed;
    margin-top: 0.9rem;
}

.menu-content{
    width: 95%;
    margin: 0 auto;
    margin-top: 8rem;
    position: relative;
    height: 100vh;
}

.responsive-menu{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    margin: 0 auto;
    background-color: white;
    padding-bottom: 1rem;
}


/*-------------------------MEDIA QUERIES-------------------------------------*/


@media only screen and (min-width: 1000px){
    .mobile-nav{
    display: none;
    }
    header{
    display: flex;
    justify-content: space-between;
    margin-top: 1rem;
    }
    .menu{
    display: flex;
    width: 25rem;
    justify-content: space-between;
    }
    main{
    margin: 0 auto;
    text-align: center;
    display: flex;
    justify-content: center;
    height: 80vh;
    /* border: 1px solid red; */
    }
    .project-list{
        text-align: left;
        line-height: 2;
    }
    .gatsby-resp-image-image {
        cursor: default;

    }

}

